# simple-tpa

./: README.md
endstone_tpa_plugin/: pyproject.toml
endstone_tpa_plugin/src/endstone_tpa_plugin/: __init__.py  tpa_plugin.py
