[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tpa-plugin"
version = "0.0.1"
description = "Endstone Plugin to run /tpa commands"

[project.entry-points."endstone"]
tpa-plugin = "endstone_tpa_plugin.tpa_plugin:TpaPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_tpa_plugin"]
